- adding an EventHandler or EventReporter invalidates System topology now so
you must call realizeTopology() after the last handler or reporter has been
added
- Integrator::successfulStepStatusString() now getSuccessfulStepStatusString()
- removed ill-conceived String::getAs() and updAs() methods
- Concretize<T> renamed more conventional ClonePtr<T>

Changes
-------
- Performance improvements to basic multibody compuations & vectors
- Added task space support methods in SimbodyMatterSubsystem: operators
  for working with point, frame, and system Jacobians and their time
  derivatives.
- Numerous fixes to Visualizer; intermittent failures and mesh problems
  fixed.
- Added DecorativePoint, 3-axis scaling, search path for Visualizer
- Pathname::fileExists() added
- Bug 1609: Cpodes was ignoring setAllowInterpolation(false).
- OSX Lion support
- Make Spline_ copy & copy assign work properly for null Spline_
- Fix mishandled work arrays in FactorQTZ
- Implemented fast prescribed motion using mixed forward/inverse computation;
  all integrators modified accordingly
- u's and z's are now integrated to relative tolerance; q's still absolute
- improved CPodes handling of triggered events
- added macros to allows use of C++11 "override" and "final" keywords
  (OVERRIDE_11, FINAL_11). Build system defines those for compilers that
  support them (VS10)
- Reimplemented predefined constants as global externals to avoid static
initialization order dependency; now safe to use these in static initializers
- Fix Verlet's initial estimates for u and z
- Standardized I/O for true/false/NaN/Inf values; added readUnformatted() and writeUnformatted() methods
- Added ReferencePtr<T> useful to allow pointer data members without requiring
user-written copy/copy assign methods
- Fix error-check bug in Xml::Element::insertNodeBefore()
- Reorganized geometry source to localize in SimTKmath for complicated geometry (like contact) and SimTKcommon for basic primitives