@@ -2,14 +2,14 @@
 #define SimTK_SIMBODY_TEXT_DATA_EVENT_REPORTER_H_
 
 /* -------------------------------------------------------------------------- *
- *                      SimTK Core: SimTK Simbody(tm)                         *
+ *                             SimTK Simbody(tm)                              *
  * -------------------------------------------------------------------------- *
- * This is part of the SimTK Core biosimulation toolkit originating from      *
+ * This is part of the SimTK biosimulation toolkit originating from           *
  * Simbios, the NIH National Center for Physics-Based Simulation of           *
  * Biological Structures at Stanford, funded under the NIH Roadmap for        *
  * Medical Research, grant U54 GM072970. See https://simtk.org.               *
  *                                                                            *
- * Portions copyright (c) 2007 Stanford University and the Authors.           *
+ * Portions copyright (c) 2007-12 Stanford University and the Authors.        *
  * Authors: Peter Eastman                                                     *
  * Contributors:                                                              *
  *                                                                            *
@@ -38,41 +38,48 @@
 
 namespace SimTK {
 
-/**
- * This template class defines a standard interface for objects that calculate 
- * a function based on a System and State for use in a TextDataEventReporter.
- */
-template <class T>
-class UserFunction {
-public:
-    virtual ~UserFunction() {}
-    virtual T evaluate(const System& system, const State& state) = 0;
-};
 
-/**
- * This is an EventReporter which prints out numeric data at regular intervals 
- * in tabular form. You provide it with a UserFunction, which calculates the 
- * values to be reported.  At every reporting interval, it invokes the 
- * UserFunction, then prints out the current time along with the value or 
- * values returned by the function.
- * 
- * After creating a TextDataEventReporter, add it to the System by calling the
- * addEventReporter() method.
- */
-class SimTK_SIMBODY_EXPORT TextDataEventReporter : public PeriodicEventReporter {
+/** This is an EventReporter which prints out numeric data at regular intervals 
+in tabular form. You provide it with a UserFunction, which calculates the 
+values to be reported.  At every reporting interval, it invokes the 
+UserFunction, then prints out the current time along with the value or 
+values returned by the function.
+ 
+After creating a TextDataEventReporter, add it to the System by calling the
+addEventReporter() method. **/
+class SimTK_SIMBODY_EXPORT TextDataEventReporter 
+:   public PeriodicEventReporter {
 public:
-    /**
-     * Create a TextDataEventReporter which calculates a single number at each 
-     * reporting interval, and displays it along with the time.
-     */
-    TextDataEventReporter(const System& system, UserFunction<Real>* function, Real reportInterval);
-    /**
-     * Create a TextDataEventReporter which calculates a vector of numbers at 
-     * each reporting interval, and displays them along with the time.
-     */
-    TextDataEventReporter(const System& system, UserFunction<Vector>* function, Real reportInterval);
+
+    /** This template class defines a standard interface for objects that 
+    calculate a function based on a System and State for use in a 
+    TextDataEventReporter. **/
+    template <class T> class UserFunction {
+    public:
+        virtual ~UserFunction() {}
+        virtual T evaluate(const System& system, const State& state) = 0;
+    };
+
+    /** Create a TextDataEventReporter which calculates a single number at each 
+    reporting interval, and displays it along with the time. Takes ownership
+    of the UserFunction object. **/
+    TextDataEventReporter(const System&         system, 
+                          UserFunction<Real>*   function, 
+                          Real                  reportInterval);
+
+    /** Create a TextDataEventReporter which calculates a vector of numbers at 
+    each reporting interval, and displays them along with the time. Takes 
+    ownership of the UserFunction object.  **/
+    TextDataEventReporter(const System&         system, 
+                          UserFunction<Vector>* function, 
+                          Real                  reportInterval);
+    /** The destructor will take care of deleting the UserFunction object;
+    don't delete it yourself. **/
     ~TextDataEventReporter();
-    void handleEvent(const State& state) const;
+
+    /** This is the implementation of the EventReporter virtual. **/ 
+    void handleEvent(const State& state) const OVERRIDE_11;
+
     class TextDataEventReporterRep;
 protected:
     TextDataEventReporterRep* rep;
